Courses offer table created

--- a/Edu.UI/Views/Home/Index.cshtml
+++ b/Edu.UI/Views/Home/Index.cshtml
@@ -57,18 +57,15 @@
 			</div>
 			<div class="col-md-6">
 				<div class="notice-right">
-					<div class="single-notice-right mb-25 pb-25">
-						<h3>PROFESSIONAL TEACHER</h3>
-						<p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings </p>
-					</div>
-					<div class="single-notice-right mb-25 pb-25">
-						<h3>Online courses</h3>
-						<p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings </p>
-					</div>
-					<div class="single-notice-right">
-						<h3>easy to addmission</h3>
-						<p>I must explain to you how all this mistaken idea of denouncing pleure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings </p>
-					</div>
+					@foreach (var rights in Model.Rights)
+					{
+						<div class="single-notice-right mb-25 pb-25 @(rights.Id==Model.Rights.ElementAt(0).Id ? "" : " ")">
+							<h3>@rights.Title</h3>
+							<p>@rights.Information </p>
+						</div>
+					}
+					
+					
 				</div>
 			</div>
 		</div>
