--- a/Edu.UI/Views/Home/Index.cshtml
+++ b/Edu.UI/Views/Home/Index.cshtml
@@ -165,74 +165,27 @@
 				
 			</div>
 			<div class="col-lg-6 pt-5 pt-lg-0">
-				<div class="single-event mb-35">
-					<div class="event-date">
-						<h3><a href="event-details.html">12 <span>June</span></a></h3>
-					</div>
-					<div class="event-content text-start">
-						<div class="event-content-left">
-							<h4><a href="event-details.html">MATHEMATICAL WORKSHOP</a></h4>
-							<ul>
-								<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-								<li><i class="fa fa-map-marker"></i>New Yourk City</li>
-							</ul>
+				@foreach (var revents in Model.RightEvents)
+				{
+					<div class="single-event mb-35 @(count<=3 ? "" : "single-event")">
+						<div class="event-date">
+							<h3><a href="event-details.html">@revents.Day <span>@revents.Month</span></a></h3>
 						</div>
-						<div class="event-content-right">
-							<a class="default-btn" href="event-details.html">join now</a>
-						</div>
-					</div>
-				</div>
-				<div class="single-event mb-35">
-					<div class="event-date">
-						<h3><a href="event-details.html">10 <span>June</span></a></h3>
-					</div>
-					<div class="event-content text-start">
-						<div class="event-content-left">
-							<h4><a href="event-details.html">WORDPRESS AUTHOR MEET UP</a></h4>
-							<ul>
-								<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-								<li><i class="fa fa-map-marker"></i>New Yourk City</li>
-							</ul>
-						</div>
-						<div class="event-content-right">
-							<a class="default-btn" href="event-details.html">join now</a>
+						<div class="event-content text-start">
+							<div class="event-content-left">
+								<h4><a href="event-details.html">@revents.Title</a></h4>
+								<ul>
+									<li><i class="fa fa-clock-o"></i>@revents.Datetime</li>
+									<li><i class="fa fa-map-marker"></i>@revents.Location</li>
+								</ul>
+							</div>
+							<div class="event-content-right">
+								<a class="default-btn" href="event-details.html">join now</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="single-event mb-35">
-					<div class="event-date">
-						<h3><a href="event-details.html">08 <span>June</span></a></h3>
-					</div>
-					<div class="event-content text-start">
-						<div class="event-content-left">
-							<h4><a href="event-details.html">DIGITAL MARKETING ANALYSIS</a></h4>
-							<ul>
-								<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-								<li><i class="fa fa-map-marker"></i>New Yourk City</li>
-							</ul>
-						</div>
-						<div class="event-content-right">
-							<a class="default-btn" href="event-details.html">join now</a>
-						</div>
-					</div>
-				</div>
-				<div class="single-event">
-					<div class="event-date">
-						<h3><a href="event-details.html">06 <span>June</span></a></h3>
-					</div>
-					<div class="event-content text-start">
-						<div class="event-content-left">
-							<h4><a href="event-details.html">WROKSHOP ON UI &amp; UX</a></h4>
-							<ul>
-								<li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-								<li><i class="fa fa-map-marker"></i>New Yourk City</li>
-							</ul>
-						</div>
-						<div class="event-content-right">
-							<a class="default-btn" href="event-details.html">join now</a>
-						</div>
-					</div>
-				</div>
+				}
+			
 			</div>
 		</div>
 	</div>
