--- a/Edu.UI/Areas/EduAdmin/Views/Slider/Index.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Slider/Index.cshtml
@@ -33,10 +33,10 @@
 							<td>@slide.Description</td>
 							<td>
 
-								<a asp-action="Update" class="btn btn-warning mb-2">
+								<a asp-action="Update" asp-route-id="@slide.Id" class="btn btn-warning mb-2">
 									<i class="fas fa-edit"></i>
 								</a>
-								<a asp-action="Delete" class="btn btn-danger mb-2">
+								<a asp-action="Delete" asp-route-id="@slide.Id" class="btn btn-danger mb-2">
 									<i class="fas fa-trash-alt"></i>
 								</a>
 
