--- a/Edu.UI/Areas/EduAdmin/Views/Slider/Delete.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Slider/Delete.cshtml
@@ -1,7 +1,21 @@
-﻿
+﻿@model Slider
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="col-xl-6">
+    <div class="card">
+        <div class="card-body">
+            <img src="@Model.ImagePath" style="width:150px" />
+            <h4 class="card-title">@Model.Title</h4>
+            <p class="card-title-desc">@Model.Description</p>
+            <div class="d-flex flex-wrap gap-2">
+                <form method="post" asp-route-id="@Model.Id">
+                    <button type="Submit" class="btn btn-danger waves-effect waves-light">Danger</button>
+                </form>
+                <button asp-action="Index" class="btn btn-light waves-effect">Back to List</button>
+            </div>
+        </div>
+    </div>
+</div>
 
