Validation Script Created

--- a/Edu.UI/Areas/EduAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Shared/_AdminLayout.cshtml
@@ -865,6 +865,7 @@
 
             <!-- App js -->
             <script src="~/admin/js/app.js"></script>
+    @RenderSection("Script",false)
 </body>
 
 
