Notices admin index created

--- a/Edu.UI/Areas/EduAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Shared/_AdminLayout.cshtml
@@ -453,6 +453,13 @@
                             </a>
 
                         </li>
+                          <li>
+                            <a asp-area="EduAdmin" asp-controller="Notices" asp-action="Index" class="has-arrow waves-effect">
+                                <i class="bx bx-layout"></i>
+                                <span key="t-layouts">Notices</span> 
+                            </a>
+
+                        </li>
 
                         <li class="menu-title" key="t-apps">Apps</li>
 
