Create method working successfully

--- a/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using EduApp.ViewModels
 @using Edu.Core.Entities
 @using EduApp.Areas.EduAdmin.ViewModels.SliderViewModel
+@using EduApp.Areas.EduAdmin.ViewModels.NoticeViewModel;
