--- a/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Edu.Core.Entities
 @using EduApp.Areas.EduAdmin.ViewModels.SliderViewModel
 @using EduApp.Areas.EduAdmin.ViewModels.NoticeViewModel;
+@using EduApp.Areas.EduAdmin.ViewModels.CourseViewModel;
