--- a/Edu.UI/Areas/EduAdmin/Views/Course/Index.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Course/Index.cshtml
@@ -31,10 +31,10 @@
 							<td>@courses.Description</td>
 							<td>
 
-								<a asp-action="Update" asp-route-id="a.Id" class="btn btn-warning mb-2">
+								<a asp-action="Update" asp-route-id="@courses.Id" class="btn btn-warning mb-2">
 									<i class="fas fa-edit"></i>
 								</a>
-								<a asp-action="Delete" asp-route-id="a.Id" class="btn btn-danger mb-2">
+								<a asp-action="Delete" asp-route-id="@courses.Id" class="btn btn-danger mb-2">
 									<i class="fas fa-trash-alt"></i>
 								</a>
 
