--- a/Edu.UI/Areas/EduAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Shared/_AdminLayout.cshtml
@@ -467,6 +467,14 @@
                             </a>
 
                         </li>
+                          </li>
+                             <li>
+                            <a asp-area="EduAdmin" asp-controller="Blog" asp-action="Index" class="has-arrow waves-effect">
+                                <i class="bx bx-layout"></i>
+                                <span key="t-layouts">Blogs</span> 
+                            </a>
+
+                        </li>
 
                         <li class="menu-title" key="t-apps">Apps</li>
 
