--- a/Edu.UI/Areas/EduAdmin/Views/Blog/Delete.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Blog/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Slider
+﻿@model Blog
 @{
     ViewData["Title"] = "Delete";
 }
@@ -7,7 +7,8 @@
     <div class="card">
         <div class="card-body">
             <img src="@Model.ImagePath" style="width:150px" />
-            <h4 class="card-title">@Model.Title</h4>
+            <h4 class="card-title">@Model.Date</h4>
+            <h4 class="card-title">@Model.ByWhom</h4>
             <p class="card-title-desc">@Model.Description</p>
             <div class="d-flex flex-wrap gap-2">
                 <form method="post" asp-route-id="@Model.Id">
