--- a/Edu.UI/Areas/EduAdmin/Views/Course/Update.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Course/Update.cshtml
@@ -1,11 +1,11 @@
-﻿@model CoursePostVM
+﻿@model CoursesOffer
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
 }
 
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title mb-4">Courses</h4>
+        <h4 class="card-title mb-4">Update</h4>
 
         <form method="post">
             <div class="row mb-4">
@@ -35,7 +35,7 @@
                 <div class="col-sm-9">
 
                     <div>
-                        <button type="submit" class="btn btn-primary w-md">Submit</button>
+                        <button type="submit" class="btn btn-primary w-md">Save</button>
                     </div>
                 </div>
             </div>
@@ -43,6 +43,7 @@
     </div>
     <!-- end card body -->
 </div>
+
 @section Script{
     <partial name="_ValidationScript" />
 }
