--- a/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using EduApp.Areas.EduAdmin.ViewModels.SliderViewModel
 @using EduApp.Areas.EduAdmin.ViewModels.NoticeViewModel;
 @using EduApp.Areas.EduAdmin.ViewModels.CourseViewModel;
+@using EduApp.Areas.EduAdmin.ViewModels.BlogViewModel;
