Course Page Created

--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -58,9 +58,9 @@
 										</li>
 										<li><a href="~/assets/about.html">About</a></li>
 										<li>
-											<a href="~/assets/course.html">courses</a>
+											<a asp-controller="Course" asp-action="Index">courses</a>
 											<ul>
-												<li><a href="~/assets/course.html">courses</a></li>
+												<li><a asp-controller="Course" asp-action="Index">courses</a></li>
 												<li><a href="~/assets/course-details.html">courses details</a></li>
 											</ul>
 										</li>
