--- a/Edu.UI/Views/Home/Index.cshtml
+++ b/Edu.UI/Views/Home/Index.cshtml
@@ -141,10 +141,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-6">
-				@foreach (var levents in Model.LeftEvents)
-				{
-					<div class="single-event mb-35 @(count<=3 ? "" : "single-event")">
+			@foreach (var levents in Model.LeftEvents)
+			{
+				<div class="col-lg-6 @(count<=3 ? "" : " pt-5 pt-lg-0")">
+
+					<div class="single-event mb-35 ">
 						<div class="event-date">
 							<h3><a href="event-details.html">@levents.Day <span>@levents.Month</span></a></h3>
 						</div>
@@ -161,32 +162,12 @@
 							</div>
 						</div>
 					</div>
-				}
-				
-			</div>
-			<div class="col-lg-6 pt-5 pt-lg-0">
-				@foreach (var revents in Model.RightEvents)
-				{
-					<div class="single-event mb-35 @(count<=3 ? "" : "single-event")">
-						<div class="event-date">
-							<h3><a href="event-details.html">@revents.Day <span>@revents.Month</span></a></h3>
-						</div>
-						<div class="event-content text-start">
-							<div class="event-content-left">
-								<h4><a href="event-details.html">@revents.Title</a></h4>
-								<ul>
-									<li><i class="fa fa-clock-o"></i>@revents.Datetime</li>
-									<li><i class="fa fa-map-marker"></i>@revents.Location</li>
-								</ul>
-							</div>
-							<div class="event-content-right">
-								<a class="default-btn" href="event-details.html">join now</a>
-							</div>
-						</div>
-					</div>
-				}
+
+
+				</div>
+			}
 			
-			</div>
+		
 		</div>
 	</div>
 </div>
