--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -61,13 +61,13 @@
 											<a asp-controller="Course" asp-action="Index">courses</a>
 											<ul>
 												<li><a asp-controller="Course" asp-action="Index">courses</a></li>
-												<li><a href="~/assets/course-details.html">courses details</a></li>
+												<li><a asp-controller="CourseDetaile" asp-action="Index">courses details</a></li>
 											</ul>
 										</li>
 										<li>
 											<a href="~/assets/event.html">event</a>
 											<ul>
-												<li><a href="~/assets/event.html">event</a></li>
+												<li><a asp-controller="Event" asp-action="Index">event</a></li>
 												<li><a href="~/assets/event-left-side-bar.html">event left sidebar</a></li>
 												<li><a href="~/assets/event-right-side-bar.html">event right sidebar</a></li>
 												<li><a href="~/assets/event-details.html">event details</a></li>
