--- a/Edu.UI/Views/EventDetaile/Index.cshtml
+++ b/Edu.UI/Views/EventDetaile/Index.cshtml
@@ -265,7 +265,7 @@
                                     </div>
                                     <div class="single-blog-widget mb-50">
                                         <h3>latest post</h3>
-                                     @*   @foreach (var blog in Model.Blogs)
+                                        @foreach (var blog in Model.Blogs)
                                         {
                                             <div class="single-post mb-30">
                                                 <div class="single-post-img">
@@ -282,7 +282,7 @@
                                                 </div>
                                             </div>
                                         }
-                                    </div>*@
+                                    </div>
                                     <div class="single-blog-widget">
                                         <h3>tags</h3>
                                         <div class="single-tag">
