--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
 												<li><a asp-controller="Event" asp-action="Index">event</a></li>
 												<li><a href="~/assets/event-left-side-bar.html">event left sidebar</a></li>
 												<li><a href="~/assets/event-right-side-bar.html">event right sidebar</a></li>
-												<li><a href="~/assets/event-details.html">event details</a></li>
+												<li><a asp-controller="EventDetaile" asp-action="Index">event details</a></li>
 											</ul>
 										</li>
 										<li class="hidden-sm">
