Auth page Created

--- a/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using EduApp.Areas.EduAdmin.ViewModels.NoticeViewModel;
 @using EduApp.Areas.EduAdmin.ViewModels.CourseViewModel;
 @using EduApp.Areas.EduAdmin.ViewModels.BlogViewModel;
+@using EduApp.Areas.EduAdmin.ViewModels.RegisterViewModel;
