LogOut is created

--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -81,15 +81,23 @@
 											</ul>
 										</li>
 										<li>
-											<a href="~/assets/blog.html">blog</a>
-											<ul>
+												<a href="~/assets/blog.html">blog</a>
+												<ul>
 												<li><a href="~/assets/blog.html">blog</a></li>
 												<li><a href="~/assets/blog-left-side-bar.html">blog left sidebar</a></li>
 												<li><a href="~/assets/blog-right-side-bar.html">blog righ sidebar</a></li>
 												<li><a href="~/assets/blog-details.html">blog details</a></li>
 											</ul>
 										</li>
-										<li><a href="~/assets/contact.html">Contact</a></li>
+										<li>
+											<a href="~/assets/blog.html">My Accaount</a>
+											<ul>
+												<li><a href="~/assets/blog.html">LoOut</a></li>
+												<li><a asp-area="EduAdmin" asp-action="LogOut">Login</a></li>
+												<li><a href="~/assets/blog-right-side-bar.html">blog righ sidebar</a></li>
+											</ul>
+										</li>
+											<li><a href="~/assets/contact.html">Contact</a></li>
 										<li><a href="~/assets/contact.html">Buy Now</a>
 									</ul>
 								</nav>
