Teacher Index all bugs fixed

--- a/Edu.UI/Views/Shared/_Layout.cshtml
+++ b/Edu.UI/Views/Shared/_Layout.cshtml
@@ -74,9 +74,9 @@
 											</ul>
 										</li>
 										<li class="hidden-sm">
-											<a href="~/assets/teacher.html">teacher</a>
+											<a asp-controller="Teacher" asp-action="Index">teacher</a>
 											<ul>
-												<li><a href="~/assets/teacher.html">teacher</a></li>
+												<li><a asp-controller="Teacher" asp-action="Index">teacher</a></li>
 												<li><a href="~/assets/teacher-details.html">teacher details</a></li>
 											</ul>
 										</li>
