--- a/Edu.UI/Views/Teacher/Index.cshtml
+++ b/Edu.UI/Views/Teacher/Index.cshtml
@@ -29,10 +29,10 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="single-teacher mb-45">
                         <div class="single-teacher-img">
-                            <a asp-controller="TeacherDetails" asp-action="Index" asp-route-id="@teacher.Id"><img style="width:370px;height:350px;object-fit:cover" src="@teacher.ImagePath" alt="teacher"></a>
+                            <a asp-controller="TeacherDetaile" asp-action="Index" asp-route-id="@teacher.Id"><img style="width:370px;height:350px;object-fit:cover" src="@teacher.ImagePath" alt="teacher"></a>
                         </div>
                         <div class="single-teacher-content text-center">
-                            <h2><a asp-controller="TeacherDetails" asp-action="Index" asp-route-id="@teacher.Id">@teacher.Name</a></h2>
+                            <h2><a asp-controller="TeacherDetaile" asp-action="Index" asp-route-id="@teacher.Id">@teacher.Name</a></h2>
                             <h4>@teacher.Posistion</h4>
                             <ul>
                                 <li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
