Event Detaile all bugs is fixed

--- a/Edu.UI/Views/Event/Index.cshtml
+++ b/Edu.UI/Views/Event/Index.cshtml
@@ -46,7 +46,7 @@
                                 <li><span>venue</span> @events.Location</li>
                             </ul>
                             <div class="event-content-right">
-                                <a class="default-btn" href="event-details.html">join now</a>
+                                <a class="default-btn" asp-controller="EventDetaile" asp-action="Index" asp-route-id="@events.Id">join now</a>
                             </div>
                         </div>
                     </div>
