Forgot asp Page with Bug

--- a/Edu.UI/Areas/EduAdmin/Views/Auth/Login.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Auth/Login.cshtml
@@ -75,8 +75,8 @@
 
                                     </div>
                                     <div class="mb-3">
-                                       Remember: <input asp-for="RememberMe" class="form-label">
-                                       
+                                       Remember: <input asp-for="RememberMe" class="form-label"> <br />
+                                        <a  asp-action="ForgotPassword">Forgot Password?</a>
 
                                     </div>
 
