--- a/Edu.UI/Views/EventDetaile/Index.cshtml
+++ b/Edu.UI/Views/EventDetaile/Index.cshtml
@@ -179,7 +179,7 @@
                             <div class="col-lg-8">
                                 <div class="event-details">
                                     <div class="event-details-img">
-                                        <img width="666" src="/@item.ImagePath" alt="event-details">
+                                        <img width="666" src="@item.ImagePath" alt="event-details">
                                         <div class="event-date">
                                             <h3>@item.Events.Datetime <span>@item.Events.Datetime</span></h3>
                                         </div>
@@ -270,7 +270,7 @@
                                             <div class="single-post mb-30">
                                                 <div class="single-post-img">
                                                     <a href="blog-details.html">
-                                                        <img width="100" src="/@blog.ImagePath" alt="post">
+                                                        <img width="100" src="@blog.ImagePath" alt="post">
                                                         <div class="blog-hover">
                                                             <i class="fa fa-link"></i>
                                                         </div>
