--- a/Edu.UI/Areas/EduAdmin/Views/Auth/Login.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Auth/Login.cshtml
@@ -76,7 +76,7 @@
                                     </div>
                                     <div class="mb-3">
                                        Remember: <input asp-for="RememberMe" class="form-label"> <br />
-                                        <a  asp-action="ForgotPassword">Forgot Password?</a>
+                                        <a  asp-action="ForgetPassword">Forgot Password?</a>
 
                                     </div>
 
