Google Login with bug

--- a/Edu.UI/Areas/EduAdmin/Views/Auth/ForgetPassword.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Auth/ForgetPassword.cshtml
@@ -1,15 +1,15 @@
 ﻿
-@model FotgotPasswordVM 
+@model ForgotPasswordVM 
 @{
     Layout = null;
 }
 <style>
-    #duz {
+    #Log {
         margin-top: 20px;
         border-radius: 20px;
     }
 
-    #cre {
+    #creat {
         padding-left: 220px !important;
         padding-right: 220px !important;
     }
@@ -46,10 +46,10 @@
                                 <input asp-for="Email" type="text" placeholder="Email">
                                 <span asp-validation-for="Email" class="text-danger"></span>
                                 <div class="button-box">
-                                    <button type="submit" id="cre" class="default-btn">Send</button>
+                                    <button type="submit" id="crate" class="default-btn">Send</button>
                                 </div>
                             </form>
-                            <a asp-action="LogIn"><button id="duz" class="default-btn">Login</button></a>
+                            <a asp-action="LogIn"><button id="Log" class="default-btn">Login</button></a>
                         </div>
                     </div>
                 </div>
