--- a/Edu.UI/Areas/EduAdmin/Views/Auth/ResetPasswordConfirm.cshtml
+++ b/Edu.UI/Areas/EduAdmin/Views/Auth/ResetPasswordConfirm.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "ResetPasswordConfirmation";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "ResetPasswordConfirm";
+   
 }
 
 <h1>ResetPasswordConfirmation</h1>
 
 
 <p>
-    Your password has been reset. Please <a asp-action="LogIn">click here to log in</a>.
+    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
 </p>
